Fix Users overflow in small screens

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,5 +11,7 @@ main {
   main {
     margin: 4rem auto;
     grid-template-columns: 1fr 3fr;
+    height: calc(100vh - 8rem); 
+    max-height: 800px; 
   }
 }
